syntax = "proto3";

package demo;

import "google/api/annotations.proto";

option go_package = "demo/";

message FavoriteStatRequest {
  repeated int32 resIds = 1;
}

message FavoriteStatResponse {
  map<int32,int32> result = 1;
}

service FavoriteService {
  rpc GetFavoriteStat(FavoriteStatRequest) returns (FavoriteStatResponse) {
    option (google.api.http) = {
      post: "/v1/post-favorites"
      body: "*"
    };
  }
}